--- a/finance_gameinator/pubspec.yaml
+++ b/finance_gameinator/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   dio: ^5.4.0
   flutter_secure_storage: ^9.0.0
   currency_text_input_formatter: ^2.1.13
+  amazon_cognito_identity_dart_2: ^3.6.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
