--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,10 @@ finance_gameinator/android/app/release
 finance_gameinator/lib/Secrets.dart
 ########################### END MOBILE APP ###########################
 
+
+########################### START DOCS ###########################
+
+**/.obsidian
+
+###########################  END DOCS  ###########################
+
