--- a/.gitignore
+++ b/.gitignore
@@ -54,7 +54,7 @@ finance_gameinator/lib/Secrets.dart
 
 ########################### START DOCS ###########################
 
-**/.obsidian
+**/.obsidian/workspace.json
 
 ###########################  END DOCS  ###########################
 
