--- a/ServerSide/Modules/Cross/FinanceGameinator.Cross.Api.Tests/FinanceGameinator.Cross.Api.Tests.csproj
+++ b/ServerSide/Modules/Cross/FinanceGameinator.Cross.Api.Tests/FinanceGameinator.Cross.Api.Tests.csproj
@@ -13,6 +13,6 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\FinanceGameinator.Games.Api\FinanceGameinator.Games.Api.csproj" />
+    <ProjectReference Include="..\FinanceGameinator.Cross.Api\FinanceGameinator.Cross.Api.csproj" />
   </ItemGroup>
 </Project>
