feat: adding dependency injection

--- a/ServerSide/Modules/Players/FinanceGameinator.Players.UseCases/FinanceGameinator.Players.UseCases.csproj
+++ b/ServerSide/Modules/Players/FinanceGameinator.Players.UseCases/FinanceGameinator.Players.UseCases.csproj
@@ -4,10 +4,13 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Configurations>Debug;Release;ReleaseMultiPublish</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Amazon.Lambda.Core" Version="2.2.0" />
     <PackageReference Include="CleanHandling" Version="1.0.9" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
