--- a/ServerSide/Modules/Cross/FinanceGameinator.Cross.Api.Tests/FinanceGameinator.Cross.Api.Tests.csproj
+++ b/ServerSide/Modules/Cross/FinanceGameinator.Cross.Api.Tests/FinanceGameinator.Cross.Api.Tests.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsTestProject>true</IsTestProject>
+    <Configurations>Debug;Release;ReleaseMultiPublish</Configurations>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.Core" Version="2.2.0" />
