--- a/ServerSide/Modules/Games/FinanceGameinator.Games.Api.Tests/FinanceGameinator.Games.Api.Tests.csproj
+++ b/ServerSide/Modules/Games/FinanceGameinator.Games.Api.Tests/FinanceGameinator.Games.Api.Tests.csproj
@@ -4,6 +4,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsTestProject>true</IsTestProject>
+    <Configurations>Debug;Release;ReleaseMultiPublish</Configurations>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.Core" Version="2.2.0" />
