--- a/ServerSide/Modules/Players/FinanceGameinator.Players.Api/FinanceGameinator.Players.Api.csproj
+++ b/ServerSide/Modules/Players/FinanceGameinator.Players.Api/FinanceGameinator.Players.Api.csproj
@@ -10,6 +10,7 @@
 		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
 		<!-- Generate ready to run images during publishing to improve cold start time. -->
 		<PublishReadyToRun>true</PublishReadyToRun>
+		<Configurations>Debug;Release;ReleaseMultiPublish</Configurations>
 	</PropertyGroup>
 
 	<ItemGroup>
