--- a/ServerSide/Modules/Players/FinanceGameinator.Players.Db/FinanceGameinator.Players.Db.csproj
+++ b/ServerSide/Modules/Players/FinanceGameinator.Players.Db/FinanceGameinator.Players.Db.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Configurations>Debug;Release;ReleaseMultiPublish</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,6 +14,7 @@
   <ItemGroup>
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.301.2" />
     <PackageReference Include="CleanHandling" Version="1.0.9" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
