--- a/ServerSide/Modules/Games/FinanceGameinator.Games.Api/FinanceGameinator.Games.Api.csproj
+++ b/ServerSide/Modules/Games/FinanceGameinator.Games.Api/FinanceGameinator.Games.Api.csproj
@@ -9,7 +9,7 @@
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <!-- Generate ready to run images during publishing to improve cold start time. -->
     <PublishReadyToRun>true</PublishReadyToRun>
-    <Configurations>Debug;Release;ReleaseMultiPublish</Configurations>
+    <Configurations>Debug;Release</Configurations>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.APIGatewayEvents" Version="2.7.0" />
