feat: registering the player when login

--- a/ServerSide/Modules/Players/FinanceGameinator.Players.Api/FinanceGameinator.Players.Api.csproj
+++ b/ServerSide/Modules/Players/FinanceGameinator.Players.Api/FinanceGameinator.Players.Api.csproj
@@ -26,4 +26,8 @@
 	  <ProjectReference Include="..\FinanceGameinator.Players.UseCases\FinanceGameinator.Players.UseCases.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Wires\Out\" />
+	</ItemGroup>
+
 </Project>
