--- a/ServerSide/Modules/Games/FinanceGameinator.Games.Api/FinanceGameinator.Games.Api.csproj
+++ b/ServerSide/Modules/Games/FinanceGameinator.Games.Api/FinanceGameinator.Games.Api.csproj
@@ -15,5 +15,13 @@
     <PackageReference Include="Amazon.Lambda.APIGatewayEvents" Version="2.7.0" />
     <PackageReference Include="Amazon.Lambda.Core" Version="2.2.0" />
     <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.4.0" />
+    <PackageReference Include="CleanHandling" Version="1.0.9" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\FinanceGameinator.Shared.Logger\FinanceGameinator.Shared.Logger.csproj" />
+    <ProjectReference Include="..\FinanceGameinator.Games.Domain\FinanceGameinator.Games.Domain.csproj" />
+    <ProjectReference Include="..\FinanceGameinator.Games.IoC\FinanceGameinator.Games.IoC.csproj" />
+    <ProjectReference Include="..\FinanceGameinator.Games.UseCases\FinanceGameinator.Games.UseCases.csproj" />
   </ItemGroup>
 </Project>
