--- a/ServerSide/Modules/Games/FinanceGameinator.Games.Integration.Test/FinanceGameinator.Games.Integration.Test.csproj
+++ b/ServerSide/Modules/Games/FinanceGameinator.Games.Integration.Test/FinanceGameinator.Games.Integration.Test.csproj
@@ -25,7 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Shared\FinanceGameinator.Shared.Test\FinanceGameinator.Shared.Test.csproj" />
-    <ProjectReference Include="..\FinanceGameinator.Players.Api\FinanceGameinator.Players.Api.csproj" />
+    <ProjectReference Include="..\FinanceGameinator.Games.Api\FinanceGameinator.Games.Api.csproj" />
   </ItemGroup>
 
 </Project>
