--- a/ServerSide/Modules/Games/FinanceGameinator.Games.UseCases/FinanceGameinator.Games.UseCases.csproj
+++ b/ServerSide/Modules/Games/FinanceGameinator.Games.UseCases/FinanceGameinator.Games.UseCases.csproj
@@ -1,9 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CleanHandling" Version="1.0.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FinanceGameinator.Games.Db\FinanceGameinator.Games.Db.csproj" />
+    <ProjectReference Include="..\FinanceGameinator.Games.Domain\FinanceGameinator.Games.Domain.csproj" />
+  </ItemGroup>
 
 </Project>
